# keep-it-rolling-game

./: .gitignore  Cargo.toml  README.md  TEMPLATE.md  build-release-web.sh  dev.sh  index.html  serve-release-web.sh  zip-dist-export.sh
.github/workflows/: ci.yml  release-android-google-play.yaml  release-ios-testflight.yaml  release.yaml
assets/shaders/: glowy.wgsl
exports/: README.md
js/: restart-audio-context.js
mobile/: Cargo.toml  Makefile  manifest.yaml
mobile/mobile.xcodeproj/: project.pbxproj
mobile/src/: lib.rs
src/: components.rs  constants.rs  events.rs  lib.rs  main.rs  plugin.rs  resources.rs  state.rs
src/materials/: glowy.rs  mod.rs
src/plugins/: mod.rs
src/plugins/fly_camera/: mod.rs  plugin.rs  systems.rs
src/plugins/fps_display/: mod.rs  plugin.rs  systems.rs
src/systems/: basic.rs  camera.rs  cleanup.rs  credits.rs  egui.rs  game_over_sensor.rs  ground.rs  lights.rs  menu.rs  mod.rs  physics.rs  scene.rs  scoring.rs  settings.rs  walls.rs  window.rs
styles/: global.css
